--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,19 @@ a:hover { color: hsl(179, 25%, 65%); }
 /* selected link */
 a:active { color: cornflowerblue;}
 
+#logo {
+    position: relative;
+}
+#logo img {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 100px;
+    height: 100px;
+    max-height: 200px;
+    max-width: 200px;
+}
+
 fieldset {
     border-color: #81a1c1;
     border-width: 2px;
@@ -37,6 +50,7 @@ footer {
     padding-right: 15px;
     padding-top: 15px;
     padding-bottom: 15px;
+    display: inline-block;
 }
 
 .title {
@@ -58,7 +72,8 @@ footer {
 
 .entry {
     /* Add some padding around each minutes entry */
-    padding: 15px 15px 15px 15px
+    padding: 15px 15px 15px 15px;
+    display: grid;
 }
 
 .icecream {
